# Neo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  mainwindow.cpp  mainwindow.h
editor/: editorbase.cpp  editorbase.h  editorhighlighter.cpp  editorhighlighter.h  editormanager.cpp  editormanager.h  editorobject.cpp  editorobject.h  programlanguage.h
plugin/: interface.h  pluginloader.cpp  pluginloader.h
service/: userconfig.h
